--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <h3>HellO! I'm Twig {{pi}}xcvcx</h3>
-<h1>sjndfkjs</h1>
+    <h2>Congurlations!</h2>
+<h3>Welcome to {{frameworkName}} {{frameworkVersion}}</h3>
 </body>
 </html>
