--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <h2>Congurlations!</h2>
+    <h2>Congratulations!</h2>
 <h3>Welcome to {{frameworkName}} {{frameworkVersion}}</h3>
 </body>
 </html>
