--- a/components/css/main.css
+++ b/components/css/main.css
@@ -14,9 +14,7 @@
     background: #fff;
     right: 0;
     bottom: 0;
-    padding: 4px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 4px 16px 4px 16px;
     border: 1px solid silver;
     z-index: 10;
     -webkit-user-select: none;
@@ -35,9 +33,7 @@
     background: #fff;
     right: 0;
     bottom: 0;
-    padding: 4px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 4px 16px 4px 16px;
     border: 1px solid silver;
     z-index: 10;
     -webkit-user-select: none;
