--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,6 +1,28 @@
-/*Config*/
 * {
     outline: none;
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    height: 100%;
+}
+
+.wrapper {
+    position: relative;
+    min-height: 100%;
+}
+
+.content {
+    padding-bottom: 90px;
+}
+
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
 }
 
 /*Debugging panel*/
@@ -69,28 +91,3 @@
 }
 
 /* ^^^ Debugging panel ^^^ */
-
-/*Admin panel*/
-#admin-form {
-    text-align: center;
-}
-
-#admin-form > h2 {
-    text-align: center;
-}
-
-#admin-form input[type = "text"] {
-    border: 1px solid silver;
-    padding: 7px;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-}
-
-#admin-form input[type = "password"] {
-    border: 1px solid silver;
-    padding: 7px;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-}
